<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.summer.evento.CreateEvent">

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/event" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventName"
        android:hint="@string/eventName"
        android:maxLines="1" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/locationImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/location" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventLocation"
        android:hint="@string/eventLocation"
        android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        
        <ImageView
            android:id="@+id/dateImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/date" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTextview"
            android:id="@+id/date"
            android:layout_weight="1" 
            android:layout_marginTop="13dp"
            android:layout_marginLeft="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp">
        
        <ImageView
            android:id="@+id/startTimeImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/time" />
  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTimeTextview"
            android:id="@+id/startTime"
            android:layout_weight="1"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp">
        
        <ImageView
            android:id="@+id/endTimeImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/time" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTimeTextview"
            android:id="@+id/endTime"
            android:layout_weight="1"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <ImageView
        android:id="@+id/descriptionImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDescriptHint"
        android:id="@+id/eventDescription" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox_add_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_add_local"
        android:layout_marginTop="15dp" />

    <CheckBox
        android:id="@+id/checkBox_add_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_add_public"
        android:layout_marginTop="5dp" />

    
    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/createBtn"
        android:id="@+id/createButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#ffcb05" />

</LinearLayout>
